# trading

./: .gitignore  Makefile  README.md  SETUP.md  main.py  pyproject.toml
.agents/: data-normalization_checklist.md  next-phase_checklist.md  type-definitions_checklist.md
docs/: architecture.md  cli-and-implementation.md  design-analysis.md  examples.md  getting-started.md  theory-of-operation.md
examples/: fetch_spy.yaml  training_basic.yaml  training_ma_crossover.yaml
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: backtest_all_strategies.py  backtest_spy.py  train_rl_agent.py
src/trading/: __init__.py  cli.py  exceptions.py  types.py
src/trading/commands/: __init__.py  fetch_data.py  gen_synth.py  run_training.py
src/trading/data/: __init__.py  sources.py
src/trading/paper/: __init__.py  engine.py  quotes.py
src/trading/rl/: __init__.py  env.py  features.py  rewards.py  wrappers.py
src/trading/strategies/: __init__.py  base.py  examples.py  sizing.py
src/trading/training/: __init__.py  backtest.py  multi_backtest.py  optimization.py  portfolio.py  walk_forward.py
tests/: test_accounts_manager.py  test_backtest.py  test_checkpointing.py  test_commands.py  test_commission_slippage.py  test_data_normalize.py  test_data_sources.py  test_exceptions.py  test_main.py  test_multi_backtest.py  test_optimization.py  test_paper_trading.py  test_portfolio.py  test_position_sizing.py  test_risk_constraints.py  test_rl.py  test_run_storage.py  test_rust_integration.py  test_storage.py  test_types.py  test_walk_forward.py
trading/: __init__.py  main.py  types.py
