[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "trading"
version = "0.2.0"
description = "Trading bot system with Rust core and Python strategies"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "maturin>=1.10.2",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.maturin]
# Rust code is in the rust/ directory
manifest-path = "rust/Cargo.toml"
module-name = "trading._core"
# Private project - no publishing needed
manylinux = "2014"
